# dcp

./: .gitignore  CMakeLists.txt  Doxyfile.in  README  README.rst  TODO  notes
src/: CMakeLists.txt  dcp.h
src/DifferentialProblem/: AbstractDifferentialProblem.cpp  AbstractDifferentialProblem.hpp  CMakeLists.txt  CompositeDifferentialProblem.cpp  CompositeDifferentialProblem.hpp  DifferentialProblem.hpp  LinearDifferentialProblem.hpp  NonLinearDifferentialProblem.hpp  NonlinearDifferentialProblem.hpp  SubdomainType.hpp  TimeDependentDifferentialProblem.cpp  TimeDependentDifferentialProblem.hpp
src/Factory/: .GenericFactory.hpp.swp  .Proxy.hpp.swp  CMakeLists.txt  Factory.hpp  GenericFactory.hpp  GenericLinearSolverFactory.cpp  LinearSolverFactory.hpp  LinearSolverProxy.cpp  Proxy.hpp
src/Functional/: CMakeLists.txt  Functional.hpp  VariableExpression.cpp  VariableExpression.hpp
src/ObjectiveFunctional/: AbstractObjectiveFunctional.cpp  AbstractObjectiveFunctional.hpp  CMakeLists.txt  Functional.hpp  ObjectiveFunctional.hpp  VariableExpression.cpp  VariableExpression.hpp
src/Optimizer/: AbstractOptimizer.cpp  AbstractOptimizer.hpp  AuxiliaryForms.h  AuxiliaryForms.ufl  BacktrackingOptimizer.cpp  BacktrackingOptimizer.hpp  CMakeLists.txt  DirichletControlValueUpdater.cpp  DirichletControlValueUpdater.hpp  DistributedControlValueUpdater.cpp  DistributedControlValueUpdater.hpp  NeumannControlValueUpdater.cpp  NeumannControlValueUpdater.hpp  Optimizer.hpp  dotproduct.h  dotproduct.ufl
src/Utils/: CMakeLists.txt  ComparisonFunctors.cpp  ComparisonFunctors.hpp  SubdomainType.hpp
src/dcp/: CMakeLists.txt
src/dcp/differential_problems/: AbstractEquationSystem.cpp  AbstractEquationSystem.h  AbstractProblem.cpp  AbstractProblem.h  AdditionalProcessor.h  CMakeLists.txt  DefaultPostProcessor.h  EquationSystem.cpp  EquationSystem.h  GenericEquationSystem.cpp  GenericEquationSystem.h  GenericProblem.cpp  GenericProblem.h  LinearProblem.h  MeshManager.h  MovingAbstractProblem.cpp  MovingAbstractProblem.h  MovingLinearProblem.h  MovingTimeDependentProblem.cpp  MovingTimeDependentProblem.h  NonlinearProblem.h  SubdomainType.h  TimeDependentEquationSystem.cpp  TimeDependentEquationSystem.h  TimeDependentProblem.cpp  TimeDependentProblem.h  differential_problems.h  meshManagerUflTools.h  meshManagerUflTools.ufl  utilities.cpp  utilities.h
src/dcp/expressions/: CMakeLists.txt  DefaultEvaluator.cpp  DefaultEvaluator.h  Expression.cpp  Expression.h  GenericExpression.cpp  GenericExpression.h  TimeDependentExpression.cpp  TimeDependentExpression.h  TimeDependentVariableExpression.cpp  TimeDependentVariableExpression.h  VariableExpression.cpp  VariableExpression.h  expressions.h
src/dcp/factories/: CMakeLists.txt  GenericFactory.h  LinearSolverFactory.h  Proxy.h  factories.h
src/dcp/functions/: CMakeLists.txt  TimeDependentFunction.cpp  TimeDependentFunction.h  functions.h
src/dcp/objective_functional/: AbstractObjectiveFunctional.cpp  AbstractObjectiveFunctional.h  CMakeLists.txt  GenericObjectiveFunctional.cpp  GenericObjectiveFunctional.h  ObjectiveFunctional.h  (+3 more)
src/differential_problems/: AbstractDifferentialProblem.cpp  AbstractDifferentialProblem.h  AbstractEquationSystem.cpp  AbstractEquationSystem.h  AbstractProblem.cpp  AbstractProblem.h  CMakeLists.txt  CompositeDifferentialProblem.cpp  CompositeDifferentialProblem.h  CompositeProblem.cpp  CompositeProblem.h  EquationSystem.cpp  EquationSystem.h  LinearDifferentialProblem.h  LinearProblem.h  NonlinearDifferentialProblem.h  NonlinearProblem.h  SubdomainType.h  TimeDependentDifferentialProblem.cpp  TimeDependentDifferentialProblem.h  TimeDependentEquationSystem.cpp  TimeDependentEquationSystem.h  TimeDependentProblem.cpp  TimeDependentProblem.h  differential_problems.h
src/factories/: GenericFactory.h  LinearSolverFactory.h  Proxy.h  factories.h
src/objective_functional/: AbstractObjectiveFunctional.cpp  AbstractObjectiveFunctional.h  CMakeLists.txt  ObjectiveFunctional.h  VariableExpression.cpp  VariableExpression.h  objective_functional.h
src/optimizers/: AbstractOptimizer.cpp  AbstractOptimizer.h  BacktrackingOptimizer.cpp  BacktrackingOptimizer.h  CMakeLists.txt  DirichletControlValueUpdater.cpp  DirichletControlValueUpdater.h  DistributedControlValueUpdater.cpp  DistributedControlValueUpdater.h  NeumannControlValueUpdater.cpp  NeumannControlValueUpdater.h  dotproduct.ufl  optimizers.h
src/splitting_methods/: AbstractSplittingMethod.cpp  AbstractSplittingMethod.h  ChorinTemamMethod.h  IncrementalChorinTemamMethod.h  NavierStokesSplittingMethod.cpp  NavierStokesSplittingMethod.h  splitting_methods.h
test/: CMakeLists.txt  README  README.rst
test/2D/: CMakeLists.txt
test/2D_side_view/: CMakeLists.txt  README
test/algebraic_problems/: CMakeLists.txt  README.rst
test/expressions_and_subdomains/: CMakeLists.txt  README.rst
test/instantaneous_control/: README
test/linear_differential_problems/: CMakeLists.txt  README  README.rst
test/moving_boundary/: CMakeLists.txt  README
test/nonlinear_differential_problems/: CMakeLists.txt  README  README.rst
test/optimization/: CMakeLists.txt  README  README.rst
test/splitting_methods/: CMakeLists.txt
test/src/: CMakeLists.txt  NavierStokes.h  NavierStokes.ufl  Poisson.h  adjoint.h  adjoint.ufl  compute_target_solution.cpp  control_variable_function_space.h  control_variable_function_space.ufl  diffusion_reaction.h  diffusion_reaction.ufl  function_derivative.h  function_derivative.ufl  lift_drag.h  main.cpp  main_settings.h  objective_functional.h  objective_functional.ufl  primal.h  test_composite_differential_problem.cpp  test_functional.cpp  test_linear_nonlinear_differential_problem.cpp
test/time_dependent_problems/: CMakeLists.txt
test/trash/: IvanLinearDifferentialProblem.hpp  IvanMovingTimeDependentProblem.cpp  IvanMovingTimeDependentProblem.h  IvanNonlinearProblem.h  NO_main_time_navierstokes.cpp  OldMovingTimeDependentProblem.cpp  OldMovingTimeDependentProblem.h  geometry_okComp.h  laplaceVec_debug.py  main_time_navierstokes.cpp
(+439 files in other folders)
