ADD_SUBDIRECTORY (DifferentialProblem)
ADD_SUBDIRECTORY (Factory)
ADD_SUBDIRECTORY (ObjectiveFunctional)
#ADD_SUBDIRECTORY (Optimizer)
ADD_SUBDIRECTORY (Utils)

ADD_LIBRARY (controlproblem SHARED ${CONTROL_PROBLEM_LIBRARY_SOURCES} ${CONTROL_PROBLEM_LIBRARY_HEADERS})
INSTALL (TARGETS controlproblem DESTINATION ${DYNAMIC_INSTALL_DIR})

