ADD_SUBDIRECTORY (DifferentialProblem)
ADD_SUBDIRECTORY (Factory)
ADD_SUBDIRECTORY (ObjectiveFunctional)
ADD_SUBDIRECTORY (Optimizer)

ADD_LIBRARY (DCP SHARED ${CONTROL_PROBLEM_LIBRARY_SOURCES} ${CONTROL_PROBLEM_LIBRARY_HEADERS})
TARGET_LINK_LIBRARIES (DCP ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES})
INSTALL (TARGETS DCP DESTINATION ${LIB_INSTALL_DIR})
