ADD_SUBDIRECTORY (differential_problems)
ADD_SUBDIRECTORY (factories)
ADD_SUBDIRECTORY (objective_functional)
ADD_SUBDIRECTORY (optimizers)

ADD_LIBRARY (${PROJECT_NAME} SHARED ${CONTROL_PROBLEM_LIBRARY_SOURCES} ${CONTROL_PROBLEM_LIBRARY_HEADERS})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES})
INSTALL (TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR})
