ADD_SUBDIRECTORY (problems)
ADD_SUBDIRECTORY (expressions)
ADD_SUBDIRECTORY (factories)
ADD_SUBDIRECTORY (objective_functional)
ADD_SUBDIRECTORY (optimizers)
ADD_SUBDIRECTORY (subdomains)
ADD_SUBDIRECTORY (time)
ADD_SUBDIRECTORY (utils)

ADD_LIBRARY (${PROJECT_NAME} SHARED ${CONTROL_PROBLEM_LIBRARY_SOURCES} ${CONTROL_PROBLEM_LIBRARY_HEADERS})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES})
INSTALL (TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR})

