CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

IF (DEFINED CXX_COMPILER)
    SET (CMAKE_CXX_COMPILER ${CXX_COMPILER})
ENDIF (DEFINED CXX_COMPILER)

IF (DEFINED C_COMPILER)
    SET (CMAKE_C_COMPILER ${C_COMPILER})
ENDIF (DEFINED C_COMPILER)

SET (PROJECT_NAME main)
PROJECT (${PROJECT_NAME})

SET (CMAKE_SKIP_RPATH TRUE)

IF (NOT CMAKE_COMPILER_IS_GNUCXX)
    MESSAGE (WARNING "-- *** Compiler ID is not GNU. 
    Proceed, but this may cause problems")
ENDIF (NOT CMAKE_COMPILER_IS_GNUCXX)

IF (NOT CMAKE_COMPILER_IS_GNUCC)
    MESSAGE (WARNING "-- *** Linker ID is not GNU. 
    Proceed, but this may cause problems")
ENDIF (NOT CMAKE_COMPILER_IS_GNUCC)
    
IF (NOT DEFINED INCLUDE_DIRS)
    SET (INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/../../include")
ENDIF (NOT DEFINED INCLUDE_DIRS)

IF (NOT DEFINED LINK_DIRS)
    SET (LINK_DIRS "${CMAKE_SOURCE_DIR}/../../lib")
ENDIF (NOT DEFINED LINK_DIRS)

ADD_SUBDIRECTORY (src)
