SET (CMAKE_CXX_FLAGS "-Wall -std=c++0x")

FIND_PACKAGE (DOLFIN)

ADD_DEFINITIONS (${DOLFIN_CXX_DEFINITIONS})

INCLUDE_DIRECTORIES (${DOLFIN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (SYSTEM ${DOLFIN_3RD_PARTY_INCLUDE_DIRS})
INCLUDE_DIRECTORIES ("/home/mattia/Dropbox/polimi/progetto_PACS/git_repo/include")
LINK_DIRECTORIES ("/home/mattia/Dropbox/polimi/progetto_PACS/git_repo/lib")

ADD_EXECUTABLE (compute_target_solution compute_target_solution.cpp)
TARGET_LINK_LIBRARIES (compute_target_solution ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} controlproblem)

SET (EXEC_SOURCES main.cpp main_settings.h)
SET (EXEC ${PROJECT_NAME})
ADD_EXECUTABLE (${EXEC} ${EXEC_SOURCES})
TARGET_LINK_LIBRARIES (${EXEC} ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} controlproblem)

