SET (CMAKE_CXX_FLAGS "-Wall -std=c++0x")

FIND_PACKAGE (DOLFIN)

ADD_DEFINITIONS (${DOLFIN_CXX_DEFINITIONS})

INCLUDE_DIRECTORIES (${DOLFIN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (SYSTEM ${DOLFIN_3RD_PARTY_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (${INCLUDE_DIRS})
LINK_DIRECTORIES (${LINK_DIRS})

SET (EXEC_SOURCES main.cpp)
SET (EXEC ${PROJECT_NAME})
ADD_EXECUTABLE (${EXEC} ${EXEC_SOURCES})
TARGET_LINK_LIBRARIES (${EXEC} ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} DCP)
