SET (CMAKE_CXX_FLAGS "-Wall")

FIND_PACKAGE (DOLFIN)
INCLUDE (${DOLFIN_USE_FILE})

FIND_PACKAGE (mshr)
INCLUDE (${MSHR_USE_FILE})

INCLUDE_DIRECTORIES (${INCLUDE_DIRS})
LINK_DIRECTORIES (${LINK_DIRS})

ADD_EXECUTABLE (compute_target_solution compute_target_solution.cpp)
TARGET_LINK_LIBRARIES (compute_target_solution ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} ${MSHR_LIBRARIES} dcp)

SET (EXEC_SOURCES main.cpp main_settings.h)
SET (EXEC ${PROJECT_NAME})
ADD_EXECUTABLE (${EXEC} ${EXEC_SOURCES})
TARGET_LINK_LIBRARIES (${EXEC} ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} ${MSHR_LIBRARIES} dcp)
