CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

IF (DEFINED CXX_COMPILER)
    SET (CMAKE_CXX_COMPILER ${CXX_COMPILER})
ENDIF (DEFINED CXX_COMPILER)

IF (DEFINED C_COMPILER)
    SET (CMAKE_C_COMPILER ${C_COMPILER})
ENDIF (DEFINED C_COMPILER)

SET (PROJECT_NAME main)
PROJECT (${PROJECT_NAME})

SET (CMAKE_SKIP_RPATH TRUE)

FILE (READ "../../cmake_header_dir.install" INCLUDE_DIRS)
FILE (READ "../../cmake_lib_dir.install" LINK_DIRS)
MESSAGE (STATUS "DCP header files are in " ${INCLUDE_DIRS})
MESSAGE (STATUS "DCP library files are in " ${LINK_DIRS})

ADD_SUBDIRECTORY (src)
