SET (CMAKE_CXX_FLAGS "-Wall")

FIND_PACKAGE (DOLFIN)
INCLUDE (${DOLFIN_USE_FILE})

INCLUDE_DIRECTORIES (${INCLUDE_DIRS})
LINK_DIRECTORIES (${LINK_DIRS})

SET (EXEC_SOURCES main.cpp)
SET (EXEC ${PROJECT_NAME})
ADD_EXECUTABLE (${EXEC} ${EXEC_SOURCES})
TARGET_LINK_LIBRARIES (${EXEC} ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} dcp)
