SET (CMAKE_CXX_FLAGS "-Wall")

FIND_PACKAGE (DOLFIN)
INCLUDE (${DOLFIN_USE_FILE})

FIND_PACKAGE (mshr)
INCLUDE (${MSHR_USE_FILE})

INCLUDE_DIRECTORIES (${INCLUDE_DIRS})
LINK_DIRECTORIES (${LINK_DIRS})

SET (EXEC_SOURCES main.cpp)
SET (EXEC ${PROJECT_NAME})
ADD_EXECUTABLE (${EXEC} ${EXEC_SOURCES})
TARGET_LINK_LIBRARIES (${EXEC} ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} ${MSHR_LIBRARIES} dcp)

ADD_EXECUTABLE (main_exact_solution main_exact_solution.cpp)
TARGET_LINK_LIBRARIES (main_exact_solution ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} ${MSHR_LIBRARIES} dcp)

ADD_EXECUTABLE (main_pulse_load main_pulse_load.cpp)
TARGET_LINK_LIBRARIES (main_pulse_load ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} ${MSHR_LIBRARIES} dcp)

ADD_EXECUTABLE (main_poiseuille main_poiseuille.cpp)
TARGET_LINK_LIBRARIES (main_poiseuille ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES} ${MSHR_LIBRARIES} dcp)
